--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,38 @@
+
+# --------  CUSTOM
+server.port=8080
 spring.application.name=CodeDrop
+# --------  DATABASE
+spring.datasource.url                 = jdbc:sqlserver://localhost:1433;databaseName=CodeDrop;encrypt=true;trustServerCertificate=true;
+spring.datasource.username            = sa
+spring.datasource.password            = 123123
+spring.datasource.driverClassName     = com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto         = none
+spring.devtools.livereload.enabled    = true
+spring.jpa.open-in-view               = true
+spring.profiles.active                = dev
+spring.devtools.add-properties        = false
+spring.jpa.show-sql                   = false
+logging.level.web                     = DEBUG
+#spring.main.allow-circular-references = true
+
+# --------  MAIL CONFIG
+spring.mail.host     = smtp.gmail.com
+spring.mail.port     = 587
+spring.mail.username = codedrop.contacts@gmail.com
+spring.mail.password = xxx
+spring.mail.properties.mail.smpt.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+
+# --------  MULTIPART
+#spring.servlet.multipart.enabled          = true
+#spring.servlet.multipart.max-file-size    = 20MB
+#spring.servlet.multipart.max-request-size = 50MB
+
+# -------- 2OAuth
+#Google
+#spring.security.oauth2.client.registration.google.client-id     = xxx
+#spring.security.oauth2.client.registration.google.client-secret = xxx
+#Facebook
+#spring.security.oauth2.client.registration.facebook.client-id     = xxx
+#spring.security.oauth2.client.registration.facebook.client-secret = xxx
