--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # --------  CUSTOM
 server.port = 8080
+server.compression.enabled = true
 spring.application.name = CodeDrop
+springdoc.api-docs.path = /api-docs
 # --------  DATABASE
 spring.datasource.url               = jdbc:sqlserver://localhost:1433;databaseName=CodeDrop;encrypt=true;trustServerCertificate=true;
 spring.datasource.username          = sa
