--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port = 8080
 server.compression.enabled = true
 spring.application.name = CodeDrop
 springdoc.api-docs.path = /api-docs
+jwt.secret=codedrop
 # --------  DATABASE
 spring.datasource.url               = jdbc:sqlserver://localhost:1433;databaseName=CodeDrop;encrypt=true;trustServerCertificate=true;
 spring.datasource.username          = sa
@@ -15,7 +16,16 @@ spring.profiles.active              = dev
 spring.devtools.add-properties      = false
 spring.jpa.show-sql                 = false
 logging.level.web                   = DEBUG
-#spring.main.allow-circular-references = true
+logging.level.org.springframework.web = debug
+spring.main.allow-circular-references = true
+server.error.include-message = always
+spring.mvc.pathmatch.matching-strategy = ant_path_matcher
+spring.jpa.properties.hibernate.globally_quoted_identifiers = true
+spring.mvc.log-request-details = true
+
+# --------  JSON
+spring.jackson.deserialization.fail-on-unknown-properties = false
+#spring.jackson.default-property-inclusion = non_null
 
 # --------  MAIL CONFIG
 spring.mail.host        = smtp.gmail.com
