--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.open-in-view             = true
 spring.profiles.active              = dev
 spring.devtools.add-properties      = false
 spring.jpa.show-sql                 = false
-logging.level.web                   = DEBUG
+logging.level.web                   = debug
 logging.level.org.springframework.web = debug
 spring.main.allow-circular-references = true
 server.error.include-message = always
